workloads/cluster-tools/base/kube-resource-report/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    application: kube-resource-report
  name: kube-resource-report
  namespace: cluster-tools
spec:
  replicas: 1
  selector:
    matchLabels:
      application: kube-resource-report
  template:
    metadata:
      labels:
        application: kube-resource-report
        eks.amazonaws.com/fargate-profile: cluster-tools-profile
    spec:
      serviceAccountName: kube-resource-report
      containers:
      - name: kube-resource-report
        # see https://github.com/hjacobs/kube-resource-report/releases
        image: hjacobs/kube-resource-report:21.6.0
        args:
        - --update-interval-minutes=1
        # this is just an example, e.g. for Minikube: assume 30 USD/month cluster costs
        # you can also add any cloud fees here (cost per control plane)
        # optional: use a custom CSV with node/server prices
        # - --pricing-file=/config/pricing.csv
        - /output
        volumeMounts:
        - mountPath: /output
          name: report-data
        # optional: configuration
        # - mountPath: /config
        #   name: config
        resources:
          limits:
            memory: 100Mi
          requests:
            cpu: 5m
            memory: 50Mi
        securityContext:
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1000
      - name: nginx
        image: nginx:alpine
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: report-data
          readOnly: true
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
        resources:
          limits:
            memory: 50Mi
          requests:
            cpu: 5m
            memory: 20Mi
      volumes:
          - name: report-data
            emptyDir:
              sizeLimit: 500Mi
          # optional: use a custom CSV with node/server prices
          # - name: config
          #   configMap:
          #     name: kube-resource-report
