workloads/cluster-tools/base/kube-resource-report/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    application: kube-resource-report
  name: kube-resource-report
  namespace: cluster-tools
spec:
  selector:
    application: kube-resource-report
  type: ClusterIP
  ports:
  - name: "kube-resource-report-frontend"
    port: 80
    protocol: TCP
    targetPort: 80
