workloads/cluster-tools/base/kube-resource-report/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-resource-report
  namespace: cluster-tools
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/load-balancer-name: private-group
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/group.name: private
    alb.ingress.kubernetes.io/group.order: '70'
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
